# Nexis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  STYLE_GUIDE.md  TODO.md  build.bat  build.py  build.sh
Docs/: api.md  internal.md  tutorial.md
Docs/API/: api_quickref_index.md
Examples/: EXAMPLES.md
Framework/: CMakeLists.txt  bare-bones.md
Framework/Core/: CMakeLists.txt
Framework/Core/inc/: Coroutines.h  DynamicArray.h  ECS.h  Encryption.h  Jobs.h  Log.h  Math.h  SIMD.h  Scene.h  Timer.h  Transform.h  Types.h  std.h
Framework/Core/inc/SIMD/: fp16.h  mask128.h  mask256.h  mask512.h  saturate128.h  saturate256.h  saturate512.h  saturate_mask128.h  saturate_mask256.h  saturate_mask512.h  simd.h  simd128.h  simd256.h  simd512.h
Framework/Core/src/: CMakeLists.txt  Disk.c  DynamicArray.c  ECS.c  Jobs.c  Log.c  Math.c  SIMD.c  Scene.c  Types.c
Framework/Display/: notes
Framework/GPU/: notes
Framework/Input/: notes
Framework/Network/: notes
Framework/Physics/: notes
Framework/Scripting/: notes
RustFrame/: Cargo.toml
